Modifing css height for particles, should resolve werid appearence on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body {
   position: absolute;
   top: 0;
   width: 100%;
+  height: 100%;
 }
 
 /* Containers */
